fix spacing

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -2,18 +2,18 @@
 
 html, body {
   @apply p-0 m-0;
- 
 }
 
 html {
   // Makes 1rem === 10px //
   font-size: 62.5%;
+  @apply h-screen w-screen;
 }
 
 body {
   font-family: Helvetica, Arial, sans-serif;
   font-size: 1.6rem;
-  @apply h-screen w-screen;
+  @apply h-full w-full;
 }
 
 button {
