--- a/src/styles/components/_app.scss
+++ b/src/styles/components/_app.scss
@@ -1,8 +1,8 @@
 .app{
-  @apply align-middle justify-around text-green-800;
+  @apply h-full w-full pt-80 align-middle justify-around text-green-800;
 
   h1{
-    @apply text-center mt-80 text-6xl ;
+    @apply text-center text-6xl ;
   }
   p{
     @apply text-center;
